[tool.poetry]
name = "oipgans"
version = "0.1.0"
description = "Organoid Image Processing with GANs"
authors = ["Joshua Higginbotham"]

[tool.poetry.dependencies]
python = "3.8.10"
matplotlib = "^3.4.3"
ipython = "^7.27.0"
tensorflow = "^2.6.0"
numpy = "1.19.2"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
